# rusted-motorchik

./: .gitignore  Cargo.toml  README.md  build.rs  start.sh
.github/workflows/: cd.yml  rust.yml
schemas/: command_filter.schema.json  guild_config.schema.json  info_channels.schema.json
src/: guild_config.rs  main.rs  role_queue.rs  rolequeue.rs
src/command_groups/: factorio.rs  fun_commands.rs  miscellaneous.rs  mod.rs  moderation.rs  server_configuration.rs  service_tools.rs  test_commands.rs
