[package]
name = "rusted-motorchik"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.24", features = [ "full" ] }
chrono = "0.4"
sysinfo = "0.29"
scraper = "0.14"
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
serde_json = "1.0"
semver = { version = "1", features = [ "serde" ] }
strum = { version = "0.22", features = [ "derive"] }
strum_macros = "0.22"
regex = "1.5"
once_cell = "1.10"
reqwest = { version = "0.11", default_features = false, features = [ "json", "rustls-tls" ] }
log = "0.4.21"
simple_logger = "5.0.0"
