[package]
name = "rusted-motorchik"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.42", features = [ "full" ] }
chrono = "0.4"
sysinfo = "0.37"
scraper = "0.25"
thiserror = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
serde_json = "1.0"
semver = { version = "1", features = [ "serde" ] }
strum = { version = "0.27", features = [ "derive"] }
strum_macros = "0.27"
regex = "1.5"
once_cell = "1.10"
reqwest = { version = "0.12", default-features = false, features = [ "json", "socks" ] }
log = "0.4"
tracing-subscriber = { version = "0.3.19", features = ["tracing-log"] }
